# robotics-club-lidar-challeng

./: .gitignore  README.md  lidar_teleop_robot.ttt  robot_control.lua
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/my_robot_pkg/share/my_robot_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/my_robot_pkg/share/my_robot_pkg/cmake/: my_robot_pkgConfig.cmake
ros2_ws/log/: latest_build
ros2_ws/src/my_robot_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_pkg/src/: lidar_listener.cpp
